--- a/INLABMA/inst/not_a_vignette/spatial_inla.tex
+++ b/INLABMA/inst/not_a_vignette/spatial_inla.tex
@@ -32,7 +32,7 @@ The Integrated Nested Laplace Approximation (INLA) provides an interesting
 way of approximating the posterior marginals of a wide range of Bayesian
 hierarchical models. This approximation is based on conducting a 
 Laplace Approximation of certain functions and numerical integration is
-extensively to integrate some of the models parameters out. 
+extensively used to integrate some of the models parameters out. 
 
 INLA is implemented in the \pkg{R-INLA} package, which provides a suitable
 interface for data analysis. Although the INLA methodology can deal with
@@ -105,20 +105,20 @@ consider different types of fixed and random effects for spatial and
 spatio-temporal analysis.
 
 In general, fitting these models have been possible because of the availability
-of different computational techniques, being Markov Chain Monte Carlo the most
-notable. For large models or big data sets, MCMC can be tedious and reaching
-the required number of samples can take a long time. Not to mention that
-autocorrelation may arise and that an increased number of iterations may be
-required.
+of different computational techniques, the most notable being Markov Chain
+Monte Carlo. For large models or big data sets, MCMC can be tedious and
+reaching the required number of samples can take a long time. Not to mention
+that autocorrelation may arise and that an increased number of iterations may
+be required.
 
 Alternatively, the posterior distributions of the parameters could be
-approximated in some way. However, most models are highly multivarite and
+approximated in some way. However, most models are highly multivariate and
 approximating the full posterior distribution may not be possible in practice.
 The Integrated Nested Laplace Approximation \citep[][INLA]{isi:000264374200002} focuses on
 the posterior marginals for latent Gaussian models. Although these may seem
 a strong constraint, these models appear in a good number of fields. 
 Hence, INLA will be particularly useful when  only
-marginal inference on the model parameters.
+marginal inference on the model parameters is needed.
 
 The \pkg{R-INLA} package\citep{rinla:2013} for the \proglang{R} programming language provides
 an implementation of INLA so that models can be fitted using standard 
@@ -131,22 +131,22 @@ are based on other distributions not available in \pkg{R-INLA}.  This may be an
 inconvenience when trying to develop new models as there is no easy way of
 extending \pkg{R-INLA} to fit other models.
 
-We have deivsed a way of extending the number of models that \pkg{R-INLA} can
+We have devised a way of extending the number of models that \pkg{R-INLA} can
 fit with little extra effort. First of all, we consider one (or more)
 parameters in our model so that, if they are fixed, the resulting model can be
-fitted with \pkg{R-INLA}. What we are doing here is, in fact, fit a model
+fitted with \pkg{R-INLA}. What we are doing here is, in fact, to fit a model
 conditioned on the assigned values to the parameters. Then, we can assign
 different values to these parameters and combine the resulting models in some
 way to obtain a fit of the original model. We have used Bayesian Model
 Averaging and numerical integration techniques to combine these models.
 
 
-This paper is organised as follows. Section \ref{sec:INLA} describes
-the Integrated Nested Laplace Approximation.  In Section \ref{sec:spmodels}
-the different latent models for spatial statistics are described.
-We describe how to extend \pkg{R-INLA} to fit new models in Section
-\ref{sec:extINLA}. Some examples are provided in Section{sec:examples}.
-Finally, we discuss why our approach is relevant in Section \ref{sec:disc}.
+This paper is organised as follows. Section~\ref{sec:INLA} describes the
+Integrated Nested Laplace Approximation.  In Section~\ref{sec:spmodels} the
+different latent models for spatial statistics are described.  We describe how
+to extend \pkg{R-INLA} to fit new models in Section~\ref{sec:extINLA}. Some
+examples are provided in Section~\ref{sec:examples}.  Finally, we discuss why
+our approach is relevant in Section~\ref{sec:disc}.
 
 \section{Integrated Nested Laplace Approximation}
 \label{sec:INLA}
@@ -183,7 +183,7 @@ $$
 \eta_i=\alpha+\sum_{j=1}^{n_f} f^{(j)}(u_{ji})+\sum_{k=1}^{n_{\beta}}\beta_k z_{ki}+\varepsilon_i
 $$
 \noindent
-$\alpha$ is the intercep, $f^{(j)}$ are functions on a set of $n_f$ random
+$\alpha$ is the intercept, $f^{(j)}$ are functions on a set of $n_f$ random
 effects on a vector of covariates $\mathbf{u}$, $\beta_k$ are coefficient on
 some covariates $\mathbf{z}$ and $\varepsilon_i$ are error terms. Hence, the
 vector of latent effects is $\mathbf{x}=\{\{\eta_i\}, \alpha, \{\beta_k\},
@@ -194,7 +194,7 @@ dependence.
 $\mathbf{x}$ is modelled using a Gaussian distribution with zero mean and
 variance-covariance matrix $Q(\theta_1)$. Now, $\theta_1$ is a vector of
 hyperparameters. Furthermore, $\mathbf{x}$ is supposed to be a Gaussian Markov
-Random Field \citep[GMRF,][]{rueheld:2005}. This means that  $Q(\theta_1)$ will fullfil a number of
+Random Field \citep[GMRF,][]{rueheld:2005}. This means that  $Q(\theta_1)$ will fulfil a number of
 Markov properties. 
 %This will make $y_i$ independent given $x_i$ and $\theta$.
 
@@ -226,8 +226,8 @@ INLA allows different forms for the likelihood of the observations.  This
 includes not only distributions from the Exponential family but also mixtures
 of distributions. Also, INLA can handle observations with different likelihoods
 in the same model. Regarding the latent effects $\mathbf{x}$, different models
-can be used. We will describe some of these in more detail in Section
-\ref{sec:spmodels}.
+can be used. We will describe some of these in more detail in
+Section~\ref{sec:spmodels}.
 
 
 The specification of the prior distributions $\pi(\theta)$ is also very 
@@ -252,8 +252,8 @@ $$
 
 In order to estimate the previous marginals, we need 
 $\pi(\mathbf{\theta}|\mathbf{y})$ or, alternatively, a convenient
-approximation that the will denote by $\tilde\pi(\theta|\mathbf{y})$.
-Intially, this approximation can be taken as
+approximation that we will denote by $\tilde\pi(\theta|\mathbf{y})$.
+Initially, this approximation can be taken as
 
 $$
 \tilde\pi(\mathbf{\theta}|\mathbf{y})\propto 
@@ -311,7 +311,7 @@ skewness.
 
 INLA has been implemented as an \proglang{R} package called \pkg{R-INLA},
 which can be downloaded from \url{http://www.r-inla.org/}. \pkg{R-INLA}
-provides an interface similar to the one used to fit Generalized Additive
+provides an interface similar to the one used to fit Generalised Additive
 Models with function \code{gam()}. It can handle fixed effects, non-linear terms
 and random effects in a \code{formula} argument. The interface is flexible
 enough to allow for the specification of different priors and model fitting
@@ -343,7 +343,7 @@ a detailed description on how \code{inla()} should be called.
 \section{Spatial models with INLA} \label{sec:spmodels}
 
 
-As discussed in Section \ref{sec:INLA}, spatial dependence can be included as
+As discussed in Section~\ref{sec:INLA}, spatial dependence can be included as
 part of the vector of latent effects $\mathbf{x}$. In principle, any number of
 random effects can be included in the model. In this Section, we will describe
 the different options available, depending on the type of problem. A full
@@ -357,7 +357,7 @@ the different spatial models included in \pkg{R-INLA}.
 First of all, we will discuss the analysis of lattice data because this will
 set the basis for other types of analyses. In the analysis of lattice data
 observations are grouped according to a set of areas, which usually represent
-some sort of administrative region (neighbourhoods, municipalities, provincies,
+some sort of administrative region (neighbourhoods, municipalities, provinces,
 countries, etc.).
 
 \pkg{R-INLA} includes a latent model for uncorrelated random effects. In
@@ -375,7 +375,7 @@ this model is not spatial, it can be combined with other spatial models.
 
 In order to model spatial correlation, neighbourhood must be set among the
 study areas.  It is often considered that two areas are neighbours is they
-share a common boundary.  Spatial autocorrelation is modeled using a Gaussian
+share a common boundary.  Spatial autocorrelation is modelled using a Gaussian
 distribution with zero mean and a precision matrix that will model
 correlation between neighbours. Given that latent effects are GMRF, 
 we can define the variance-covariance matrix of the random effects
@@ -438,9 +438,9 @@ using function \code{nd2mat}. This will be passed to function \code{f()} when
 defining the spatial model.
 
 A summary of some latent models implemented in \pkg{R-INLA}, and that can be
-used within the \code{f()} function, is available in Table
-\ref{tab:inlamodels}. Note that this is not an exhaustive list and that a
-complete list of the available latent models can be obtanined from the
+used within the \code{f()} function, is available in
+Table~\ref{tab:inlamodels}. Note that this is not an exhaustive list and that a
+complete list of the available latent models can be obtained from the
 \pkg{R-INLA} documentation. Also, detailed examples are available from the
 \pkg{R-INLA} website at \url{http://www.r-inla.org}.
 
@@ -470,7 +470,7 @@ for spatial statistics.}
 The model that we are fitting is:
 
 $$
-y_i = \alpha+\beta X + u_i +\varepsilon_i
+y_i = \alpha+\beta X + v_i +\varepsilon_i
 $$
 \noindent
 where $\alpha$ is the model intercept, $\beta$ a vector of coefficients
@@ -485,12 +485,12 @@ and $\varepsilon_i$ is random Gaussian error term.
 > library("maptools")
 > data("boston")
 > library("INLA")
-> adj <- nb2mat(boston.soi, style = "B")
-> boston.c$ID <- 1:nrow(boston.c)
-> form <- log(CMEDV) ~ CRIM + ZN + INDUS + CHAS + I(NOX^2) + I(RM^2) + 
-+     AGE + log(DIS) + log(RAD) + TAX + PTRATIO + B + log(LSTAT) + 
-+     f(ID, model = "besag", graph = adj)
-> m1 <- inla(form, data = boston.c)
+> adj<- nb2mat(boston.soi, style="B")
+> boston.c$ID<-1:nrow(boston.c)
+> form<-log(CMEDV) ~ CRIM + ZN + INDUS + CHAS + I(NOX^2) + I(RM^2) +  AGE + 
++ log(DIS) + log(RAD) + TAX + PTRATIO + B + log(LSTAT)+
++ f(ID, model="besag", graph=adj )
+> m1<-inla(form, data=boston.c)
 \end{Sinput}
 \end{Schunk}
 
@@ -513,47 +513,48 @@ Call:
 
 Time used:
  Pre-processing    Running inla Post-processing           Total 
-         0.4232          0.7319          0.0582          1.2133 
+         1.3745          1.5689          0.0925          3.0358 
 
 Fixed effects:
-                 mean       sd 0.025quant  0.5quant 0.975quant      kld
-(Intercept)  3.534954 1.60e-01   3.221396  3.535071   3.847909 0.00e+00
-CRIM        -0.005130 9.18e-04  -0.006932 -0.005130  -0.003330 0.00e+00
-ZN           0.000426 4.65e-04  -0.000486  0.000426   0.001339 0.00e+00
-INDUS       -0.000359 2.48e-03  -0.005234 -0.000359   0.004514 0.00e+00
-CHAS1       -0.028389 2.73e-02  -0.082031 -0.028388   0.025257 7.25e-17
-I(NOX^2)    -0.114759 1.51e-01  -0.409768 -0.114865   0.180924 1.15e-16
-I(RM^2)      0.010762 1.05e-03   0.008694  0.010762   0.012831 0.00e+00
-AGE         -0.001290 4.52e-04  -0.002176 -0.001290  -0.000404 0.00e+00
-log(DIS)    -0.094010 6.88e-02  -0.228925 -0.094034   0.041072 0.00e+00
-log(RAD)     0.051257 2.00e-02   0.012048  0.051257   0.090474 0.00e+00
-TAX         -0.000408 1.11e-04  -0.000625 -0.000408  -0.000191 1.08e-15
-PTRATIO     -0.016932 5.07e-03  -0.026878 -0.016933  -0.006982 5.27e-16
-B            0.000714 9.75e-05   0.000522  0.000714   0.000905 1.18e-30
-log(LSTAT)  -0.229971 2.17e-02  -0.272481 -0.229980  -0.187394 3.70e-32
+               mean     sd 0.025quant 0.5quant 0.975quant kld
+(Intercept)  3.5323 0.1595     3.2192   3.5325     3.8449   0
+CRIM        -0.0051 0.0009    -0.0069  -0.0051    -0.0033   0
+ZN           0.0004 0.0005    -0.0005   0.0004     0.0013   0
+INDUS       -0.0004 0.0025    -0.0052  -0.0004     0.0045   0
+CHAS1       -0.0285 0.0273    -0.0821  -0.0285     0.0251   0
+I(NOX^2)    -0.1136 0.1506    -0.4088  -0.1137     0.1822   0
+I(RM^2)      0.0108 0.0011     0.0087   0.0108     0.0128   0
+AGE         -0.0013 0.0005    -0.0022  -0.0013    -0.0004   0
+log(DIS)    -0.0938 0.0689    -0.2291  -0.0939     0.0415   0
+log(RAD)     0.0513 0.0200     0.0120   0.0513     0.0905   0
+TAX         -0.0004 0.0001    -0.0006  -0.0004    -0.0002   0
+PTRATIO     -0.0169 0.0051    -0.0269  -0.0169    -0.0070   0
+B            0.0007 0.0001     0.0005   0.0007     0.0009   0
+log(LSTAT)  -0.2295 0.0216    -0.2719  -0.2295    -0.1870   0
 
 Random effects:
-Name	  Model	  	Max KLD 
-ID   Besags ICAR model 
+Name	  Model
+ ID   Besags ICAR model 
 
 Model hyperparameters:
-                                        mean   sd     0.025quant 0.5quant
-Precision for the Gaussian observations 379.02 163.48 182.84     338.81  
-Precision for ID                         23.96   3.25  17.60      24.02  
+                                        mean    sd      0.025quant 0.5quant
+Precision for the Gaussian observations 408.385 176.137 197.624    365.026 
+Precision for ID                         23.499   2.956  17.629     23.576 
                                         0.975quant
-Precision for the Gaussian observations 803.47    
-Precision for ID                         30.23    
+Precision for the Gaussian observations 863.394   
+Precision for ID                         29.115   
 
-Expected number of effective parameters(std dev): 383.61(40.59)
-Number of equivalent replicates : 1.319 
+Expected number of effective parameters(std dev): 388.82(38.53)
+Number of equivalent replicates : 1.301 
 
-Marginal Likelihood:  -108.40 
+Marginal Likelihood:  -108.27 
+CPO and PIT are computed
 \end{Soutput}
 \end{Schunk}
 \noindent
 The summary includes summary statistics of the posterior marginals of the
 coefficients of the fixed effects plus the precisions of the instrinsic CAR
-random effect and the error term. Figure \ref{fig:marg1} shows the estimated
+random effect and the error term. Figure~\ref{fig:marg1} shows the estimated
 marginals of the precisions in the model.
 
 \begin{figure}[h]
@@ -634,8 +635,8 @@ predictors, using \code{control.predictor=list(compute=TRUE)}.
 \end{Sinput}
 \end{Schunk}
 \noindent
-Figure \ref{fig:sppa} shows the original counts and the smoothed counts.  Note
-that this is similar to estimating the intensity of an inhomogenous point
+Figure~\ref{fig:sppa} shows the original counts and the smoothed counts.  Note
+that this is similar to estimating the intensity of an inhomogeneous point
 pattern using a smoothing method.
 
 
@@ -666,7 +667,7 @@ to model spatial dependence in the grid of points using a CAR specification,
 
 
 This correlation allows, for example, the use of exponentially decaying
-functions suc as 
+functions such as 
 
 $$
 \Sigma_{ij} = \sigma^2 \exp(-d_{ij}/\varphi)
@@ -677,9 +678,9 @@ is a parameter that controls the scale of the spatial dependence.
 
 
 %
-%IMPORTANT: CHange the text if used in the paper
+%IMPORTANT: Change the text if used in the paper
 %
-%In this acse, the variance-covariance matrix is defined as 
+%In this case, the variance-covariance matrix is defined as 
 %
 %$$
 %\Sigma_{ij}= \sigma^2 \frac{\tau^{\kappa} K(\tau, \kappa)}{2^{\kappa-1} \Gamma(\kappa)}; \tau = \alpha_{\kappa}d_{ij}/\varphi
@@ -693,7 +694,7 @@ is a parameter that controls the scale of the spatial dependence.
 
 
 
-More rencetly, \citet{Lindgren:2011} follow a different approach based on
+More recently, \citet{Lindgren:2011} follow a different approach based on
 a triangulation on the sampling points and the use of stochastic partial
 differential equations. Now, the spatial effects are defined as
 
@@ -703,7 +704,7 @@ $$
 \noindent
 Here, $\{\psi_k(s)\}$ are a basis of functions and $w_k$ are associated
 weights. Weights are assumed to be Gaussian. The advantages of this approach
-for sptial statistics are is fully described in \citet{Camelettietal:2013}.
+for spatial statistics are is fully described in \citet{Camelettietal:2013}.
 
 
 In order to show how to fit geostatistical models with \pkg{R-INLA} we
@@ -711,7 +712,7 @@ reproduce here an example from \citet{GomezRubioetal:2013} based on the
 Rongelap data set \citep{DiggleRibeiro:2007}, which records  radionuclide
 concentration at 157 different locations in Rongelap island. We have restricted
 the analysis to one of the clusters in the north-east part of the island
-because obervations need to be matched to a regular grid of points.
+because observations need to be matched to a regular grid of points.
 
 \begin{Schunk}
 \begin{Sinput}
@@ -772,7 +773,7 @@ the value of the range and precision.
 \end{Sinput}
 \end{Schunk}
 
-Figure \ref{fig:geos} shows the observed and estimated radionuclide
+Figure~\ref{fig:geos} shows the observed and estimated radionuclide
 concentration in Rongelap island. It can be seen how our model has spatially
 smoothed the observed values.
 
@@ -804,8 +805,9 @@ the moment.
 
 This approach is based on considering a model where one or several have been
 fixed in a way that makes the conditioned model fitable with \pkg{R-INLA}.  If
-we denote by $\rho$ the vector of parameters to fix and by $\hat{\rho}$ the
-fixed parameters,  the full posterior marginal could be written as
+we denote by $\rho$ the vector of parameters to fix and by $\hat{\rho}$ a
+specific set of fixed parameter values,  the full posterior marginal could be
+written as
 
 
 $$
@@ -837,8 +839,8 @@ note that this can be written as
 \noindent
 Here $\pi(\rho)$ is a prior distribution on $\rho$ and $\pi(\mathbf{y}|\rho)$
 is the marginal likelihood of the model, which is reported by \pkg{R-INLA}.
-Hence, $\pi(\rho|\mathbf{y})$ can be estimated by re-scaling expression 
-(\ref{eq:postrho}).
+Hence, $\pi(\rho|\mathbf{y})$ can be estimated by re-scaling
+expression~(\ref{eq:postrho}).
 
 
 The posterior distribution of $\rho$ can be estimated by defining a fine grid
@@ -856,35 +858,35 @@ $\pi(\mathbf{x}, \mathbf{\theta}|\mathbf{y})$ as follows:
 \label{eq:fullpostapp}
 \end{equation}
 \noindent
-where $\Delta_i$ is the amplitude of the interval used in the discretization
+where $\Delta_i$ is the amplitude of the interval used in the discretisation
 of $\rho$.
 
 Note that the previous expression can be regarded as a weighted average
 of the different models fitted after conditioning on different values of
 $\rho$.
 
-From equation \ref{eq:fullpostapp} it is clear that we can obtain the following
+From equation~\ref{eq:fullpostapp} it is clear that we can obtain the following
 approximations to the posterior marginals of the individual latent parameters
 and hyperparameters:
 
 $$
-\hat{\pi}(x_i|\mathbf{y}) = \sum_i \pi(x_i|\mathbf{y}, \rho_i) w_i
+\hat{\pi}(x_i|\mathbf{y}) = \sum_j \pi(x_i|\mathbf{y}, \rho_j) w_j
 $$
 
 $$
-\hat{\pi}(\theta_i|\mathbf{y}) = \sum_i \pi(\theta_i|\mathbf{y}, \rho_i) w_i
+\hat{\pi}(\theta_i|\mathbf{y}) = \sum_j \pi(\theta_i|\mathbf{y}, \rho_j) w_j
 $$
 \noindent
-$w_i$ is a weight associated with $\rho_i$ as follows:
+$w_j$ is a weight associated with $\rho_j$ as follows:
 
 $$
-w_i = \pi(\rho_i|\mathbf{y})\Delta_i
+w_j = \pi(\rho_j|\mathbf{y})\Delta_j
 $$
 
 This is like making a Bayesian Model Averaging \citep{Hoetingetal:1999} on the
 different conditioned models fitted with \pkg{R-INLA}. Altogether, this
 provides a way of combining simpler models to obtain our desired model. In
-Section \ref{sec:examples} we show how to apply these ideas to different models
+Section~\ref{sec:examples} we show how to apply these ideas to different models
 in spatial and spatio-temporal statistics.
 
 
@@ -905,7 +907,7 @@ We have implemented this approach in an \pkg{R} package called \pkg{INLABMA},
 available from \url{http://r-forge.r-project.org}. The package includes some
 general functions to conduct Bayesian Model Averaging of models fitted with
 INLA. In addition, we have included some wrapper functions to fit the models
-described in Section \ref{sec:examples}.
+described in Section~\ref{sec:examples}.
 
 
 \section{Examples}
@@ -925,7 +927,7 @@ u \sim MVN(0, \Sigma);\ \Sigma=\sigma^2 ((1-\lambda) I_n+\lambda M)^{-1}
 \end{equation}
 \noindent
 Here $M$ is the precision matrix of a process with spatial structure and we
-will take that of an instrinsic CAR specification. Hence, the precision matrix
+will take that of an intrinsic CAR specification. Hence, the precision matrix
 is, in a sense, a mixture of the precisions of a non-spatial and a spatial
 one. $\lambda$ controls how strong the spatial structure is. For $\lambda=1$
 the effect is entirely spatial whilst for $\lambda=0$ there is no spatial
@@ -944,8 +946,8 @@ fitted for a given value of the spatial parameter $\lambda$. This
 wrapper function is included in the \proglang{R} package \pkg{R-INLA}.
 
 It is based on the \code{generic0} latent model available in  \pkg{R-INLA}.
-This model implements a multivariage Gaussian random effect with zero mean and
-precision matrix as in equation (\ref{eq:leroux}). Once $\lambda$ is fixed the
+This model implements a multivariate Gaussian random effect with zero mean and
+precision matrix as in equation~(\ref{eq:leroux}). Once $\lambda$ is fixed the
 model can be easily fitted with \pkg{R-INLA}.  We repeat this procedure for
 different values of $\lambda$ to obtain a list of fitted models to be combined
 later.
@@ -988,11 +990,11 @@ function (formula, d, W, lambda, improve = TRUE, fhyper = NULL,
 In the previous code, the precision matrix is created using the adjacency
 matrix and the value of $\lambda$. Then the \code{generic0} model is added to the
 formula with the fixed effects. Finally we correct the marginal log-likelihood
-$\pi(\mathbf{y})$ by adding the log-determinat of $(1-\lambda)I_n+\lambda M)$.
+$\pi(\mathbf{y})$ by adding the log-determinant of $(1-\lambda)I_n+\lambda M)$.
 Note that, in principle, this is not needed to fit a single model and obtain
 the approximations to the posterior marginals as it is a constant. However, we
 are fitting and combining several models so we need to correct for this
-becuase this scaling factor will change with the value of $\lambda$.
+because this scaling factor will change with the value of $\lambda$.
 Argument \code{'...'} is used to pass any other options to \code{inla()}. 
 This can be used to tune and set a number of other options.
 
@@ -1019,7 +1021,7 @@ Function \code{inla.leroux} is used in the example below to compute the fitted
 models for the Leroux et al. model.  In this case, we take $\lambda$ to be in
 the interval $(0.8,0.99)$ after previous assessment on where
 $\pi(\lambda|\mathbf{y})$ has its mode. Also, we define a prior for the
-precission of the random effects in variable \code{fhyper}.
+precision of the random effects in variable \code{fhyper}.
 
 \begin{Schunk}
 \begin{Sinput}
@@ -1033,13 +1035,17 @@ precission of the random effects in variable \code{fhyper}.
 
 \begin{Schunk}
 \begin{Sinput}
-> lerouxmodels = mclapply(rlambda, function(lambda) {
-+     leroux.inla(form2, d = boston.c, W = boston.matB, lambda = lambda, 
-+         fhyper = fhyper, improve = TRUE, family = "gaussian", 
-+         control.predictor = list(compute = TRUE), control.compute = list(dic = TRUE, 
-+             cpo = TRUE), control.inla = list(print.joint.hyper = TRUE), 
-+         verbose = FALSE)
-+ })
+> lerouxmodels = mclapply(rlambda,
++         function(lambda) {
++                 leroux.inla(form2, d=boston.c, W=boston.matB, lambda=lambda,
++                         fhyper=fhyper, improve=TRUE,
++                         family = "gaussian",
++ #   control.family = list(hyper = zero.variance),
++                         control.predictor=list(compute=TRUE),
++                         control.compute=list(dic=TRUE, cpo=TRUE),
++                         control.inla=list(print.joint.hyper=TRUE), verbose=FALSE
++                 )
++         })
 \end{Sinput}
 \end{Schunk}
 
@@ -1058,7 +1064,7 @@ values of $\rho$.
 
 \begin{Schunk}
 \begin{Sinput}
-> bmaleroux <- BMA2(lerouxmodels, rlambda, 0, impacts = FALSE)
+> bmaleroux<-BMA2(lerouxmodels, rlambda, 0, impacts=FALSE)
 \end{Sinput}
 \end{Schunk}
 
@@ -1069,7 +1075,7 @@ includes the posterior marginals and summary statistics for $\lambda$
 in a list element named \code{rho}. This provides summary statistics (mean,
 standard deviation, some quantiles and the posterior marginal.
 
-The same model can be fitted usig package \pkg{CARBayes}\citep{CARBayes:2013}
+The same model can be fitted using package \pkg{CARBayes}\citep{CARBayes:2013}
 as follows:
 
 \begin{Schunk}
@@ -1080,25 +1086,32 @@ as follows:
 \begin{Schunk}
 \begin{Sinput}
 > attach(boston.c)
-> lcarbayes <- gaussian.lerouxCAR(form2, W = as.matrix(bmspB), 
-+     burnin = 500, n.sample = 2500, thin = 5)
+> lcarbayes<- gaussian.lerouxCAR (form2, W=as.matrix(bmspB), burnin=500, 
++    n.sample=2500, thin=5)
 > detach(boston.c)
 \end{Sinput}
 \end{Schunk}
 
 
-Table \ref{tab:leroux} shows point estimates and standard deviations of the
+Table~\ref{tab:leroux} shows point estimates and standard deviations of the
 fixed effects and parameter $\lambda$ (bottom line) in the model. It is clear
 that there are no significant differences between the estimates computed with
-MCMC and our method.  Furthermore, Figure \ref{fig:leroux} shows the marginal
+MCMC and our method.  Furthermore, Figure~\ref{fig:leroux} shows the marginal
 distribution of $\lambda$ and it shows how our estimate is very close to that
 provided by MCMC. The slight difference that is observed may well be due to the
 fact that different priors have been used for the variances of the random
 effects and the error term. \pkg{CARBayes} uses uniform priors on the variances,
 whiles \pkg{R-INLA} assigns inverted Gamma distributions to the variances.
 
+Figure~\ref{fig:leroux} also shows a good agreement between the posterior
+means of the fitted values. However, we have found that our estimates
+of the posterior marginals of the precisions differ from those obtained
+with MCMC. This may be due to the high correlation between these two parameters
+(-0.9, computed using the MCMC samples) which may cause some confunding in the
+model.
+
 % latex table generated in R 3.0.1 by xtable 1.7-1 package
-% Sat Jun  1 16:12:05 2013
+% Sun Jun  2 22:17:27 2013
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrr}
@@ -1122,7 +1135,7 @@ whiles \pkg{R-INLA} assigns inverted Gamma distributions to the variances.
   lambda & 0.9493 & 0.0294 & 0.9537 & 0.0262 \\ 
    \hline
 \end{tabular}
-\caption{Point estimates of fixed effects using INLA and MCMC.} 
+\caption{Point estimates of fixed effects and $\lambda$ using INLA and MCMC.} 
 \label{tab:leroux}
 \end{table}
 
@@ -1131,14 +1144,14 @@ whiles \pkg{R-INLA} assigns inverted Gamma distributions to the variances.
 \includegraphics{spatial_inla-027}
 \end{center}
 \caption{Comparisson between the posterior marginals of several parameters in 
-Leroux et al.'s model and fitted values with INLA and MCMC.}
+Leroux et al.'s model and fitted values with INLA (red) and MCMC (black).}
 \label{fig:leroux}
 \end{figure}
 
 While writting this paper, \citet{LeeMitchell:2013} have come up with an
 alternative way of fitting this model using \pkg{R-INLA} and a \code{generic1}
-latent model. In general, the results obtained with our approach are very
-similar to the ones obtained with theirs for the Boston housing data.
+latent model. In general, the results obtained for $\lambda$ with our approach
+are very similar to the ones obtained with theirs for the Boston housing data.
 
 
 
@@ -1167,7 +1180,7 @@ being a $n\times n$ identity matrix and $\sigma^2$ is the variance of the error
 term.
 
 
-The adjacency matrix $W$ is often taken to be row-standadrised \citep[see, for
+The adjacency matrix $W$ is often taken to be row-standardised \citep[see, for
 example,][]{Haining:2003} to ensure that $\rho$ in the interval $(-1, 1)$.
 Also, when $\rho$ is equal to zero there is no spatial dependence.
 
@@ -1179,12 +1192,12 @@ y= \alpha+\beta X+\varepsilon'
 \noindent
 $\varepsilon '$ is now an error term with a Gaussian distribution with zero
 mean and variance-covariance matrix $\Sigma=((I_n-\rho W)(I_n-\rho W'))^{-1}$.
-Note that this variance-covariance encodes spatial dependance in a particular
+Note that this variance-covariance encodes spatial dependence in a particular
 way and that this is often referred to as Spatial Autoregressive (SAR)
 specification.
 
 
-Alternatively, autocorrelation can be modelled explicitely so that the
+Alternatively, autocorrelation can be modelled explicitly so that the
 variable response $y$ depends on itself as follows:
 
 $$
@@ -1203,7 +1216,7 @@ variance-covariance matrix with a SAR specification.
 
 In addition to the previous models, sometimes lagged covariates are 
 added to include the effects of neighbouring covariates. This is known
-as Spatial Durbin Model  and it is often expresed as
+as Spatial Durbin Model  and it is often expressed as
 
 $$
 y= \rho W y+ \alpha+\beta X+\gamma W X +\varepsilon 
@@ -1215,15 +1228,15 @@ $$
 y= (I_n-\rho W)^{-1}(\alpha+\beta X+\gamma W X) +\varepsilon '
 $$
 \noindent
-Note that this is like our previopus model \ref{eq:slm} using an extended desgn
-matrix that includes both $X$ and $W X$.
+Note that this is like our previous model~(\ref{eq:slm}) using an extended
+design matrix that includes both $X$ and $W X$.
 
 These models cannot be fitted with \pkg{R-INLA} for two reasons. First of all, 
 the SAR specification is not implemented, so we cannot consider it for out
-error terms. Furthermore, it is not posible to define a model 
+error terms. Furthermore, it is not possible to define a model 
 where the linear predictor is multiplied by $(I_n-\rho W)^{-1}$.
 
-Following Section \ref{sec:extINLA}, it should be noted that, for a fixed
+Following Section~\ref{sec:extINLA}, it should be noted that, for a fixed
 $\rho$ these models become standard linear models with a particular 
 (but known) design matrix for the fixed effects and a multivariate Gaussian
 distribution with zero mean and variance-covariance matrix.
@@ -1241,7 +1254,7 @@ assume that $\rho$ is in the interval $[0,1)$.
 Finally, we have considered here the Gaussian case, but it is very easy to
 extend this model to consider other likelihoods. In particular,
 \citet{LeSageetal:2011} describe a Spatial Probit model where the outcome is
-whether an event occured. Hence, the response and the linear predictors are
+whether an event occurred. Hence, the response and the linear predictors are
 linked via a probit function as follows:
 
 $$
@@ -1267,7 +1280,7 @@ spatial autocorrelation parameter $\rho$. These wrapper functions are
 included in \proglang{R} package \pkg{R-INLA}.
 
 All functions are based on the \code{generic0} model available in  \pkg{R-INLA}.
-This model implements a multivariage Gaussian random effect with zero mean
+This model implements a multivariate Gaussian random effect with zero mean
 and precision matrix $\frac{1}{\sigma^2} Q$. Once $\rho$ is fixed, $Q$ is
 known and the model can be easily fitted with \pkg{R-INLA} for that value of
 $\rho$. We repeat this procedure for different values of $\rho$ to
@@ -1337,20 +1350,23 @@ standard MCMC methods.
 
 \begin{Schunk}
 \begin{Sinput}
-> fform <- log(CMEDV) ~ CRIM + ZN + INDUS + CHAS + I(NOX^2) + I(RM^2) + 
-+     AGE + log(DIS) + log(RAD) + TAX + PTRATIO + B + log(LSTAT)
-> rrho1 <- seq(0.5, 0.9, len = 20)
+> fform<-log(CMEDV) ~CRIM+ZN + INDUS + CHAS + I(NOX^2)+
++    I(RM^2) +  AGE + log(DIS) + log(RAD) + TAX + PTRATIO + B + log(LSTAT)
+> rrho1<-seq(0.5, .9, len=20)
 \end{Sinput}
 \end{Schunk}
 \begin{Schunk}
 \begin{Sinput}
-> semmodels = mclapply(rrho1, function(rho) {
-+     sem.inla(fform, d = boston.c, W = boston.mat, rho = rho, 
-+         family = "gaussian", impacts = FALSE, control.family = list(hyper = zero.variance), 
-+         control.predictor = list(compute = TRUE), control.compute = list(dic = TRUE, 
-+             cpo = TRUE), control.inla = list(print.joint.hyper = TRUE), 
-+         verbose = FALSE)
-+ })
+> semmodels = mclapply(rrho1,
++         function(rho) {
++                 sem.inla(fform, d=boston.c, W=boston.mat, rho=rho,
++                         family = "gaussian", impacts=FALSE,
++                         control.family = list(hyper = zero.variance),
++                         control.predictor=list(compute=TRUE),
++                         control.compute=list(dic=TRUE, cpo=TRUE),
++                         control.inla=list(print.joint.hyper=TRUE), verbose=FALSE
++                 )
++         })
 \end{Sinput}
 \end{Schunk}
 
@@ -1363,7 +1379,7 @@ the density of the prior at the different values of $\rho$.
 
 \begin{Schunk}
 \begin{Sinput}
-> bmasem <- BMA2(semmodels, rrho1, 1, impacts = FALSE)
+> bmasem<-BMA2(semmodels, rrho1, 1 , impacts=FALSE)
 \end{Sinput}
 \end{Schunk}
 
@@ -1378,26 +1394,30 @@ computations.
 
 \begin{Schunk}
 \begin{Sinput}
-> mmatrix <- model.matrix(fform, boston.c)
-> rrho2 <- seq(0.3, 0.6, len = 20)
+> mmatrix<-model.matrix(fform, boston.c)
+> rrho2<-seq(0.3, .6, len=20)
 \end{Sinput}
 \end{Schunk}
 
 \begin{Schunk}
 \begin{Sinput}
-> slmmodels = mclapply(rrho2, function(rho) {
-+     slm.inla(form, d = boston.c, W = boston.mat, rho = rho, mmatrix = mmatrix, 
-+         family = "gaussian", impacts = TRUE, control.data = list(hyper = zero.variance), 
-+         control.predictor = list(compute = TRUE), control.compute = list(dic = TRUE, 
-+             cpo = TRUE), control.inla = list(print.joint.hyper = TRUE), 
-+         verbose = FALSE)
-+ })
+> slmmodels = mclapply(rrho2,
++         function(rho) {
++                 slm.inla(form, d=boston.c, W=boston.mat, rho=rho, mmatrix=mmatrix,
++                         family = "gaussian", impacts=TRUE,
++                         control.data = list(hyper = zero.variance),
++                         control.predictor=list(compute=TRUE),
++                         control.compute=list(dic=TRUE, cpo=TRUE),
++                         control.inla=list(print.joint.hyper=TRUE), verbose=FALSE
++                 )
++         })
+> 
 \end{Sinput}
 \end{Schunk}
 
 \begin{Schunk}
 \begin{Sinput}
-> bmaslm <- BMA2(slmmodels, rrho2, 1, impacts = FALSE)
+> bmaslm<-BMA2(slmmodels, rrho2, 1 , impacts=FALSE)
 \end{Sinput}
 \end{Schunk}
 
@@ -1408,41 +1428,44 @@ regarless of the value of $\rho$. This can be later passed to wrapper function
 
 \begin{Schunk}
 \begin{Sinput}
-> mmW <- bmsp %*% mmatrix[, -1]
-> mmatrixsdm <- cbind(mmatrix, as.matrix(mmW))
-> rrho3 <- seq(0.4, 0.7, len = 20)
+> mmW<-bmsp%*%mmatrix[,-1]#Remove intercept
+> mmatrixsdm<-cbind(mmatrix, as.matrix(mmW))
+> rrho3<-seq(0.4, .7, len=20)
 \end{Sinput}
 \end{Schunk}
 
 \begin{Schunk}
 \begin{Sinput}
-> sdmmodels = mclapply(rrho3, function(rho) {
-+     sdm.inla(form, d = boston.c, W = boston.mat, rho = rho, mmatrix = mmatrixsdm, 
-+         family = "gaussian", impacts = TRUE, control.data = list(hyper = zero.variance), 
-+         control.predictor = list(compute = TRUE), control.compute = list(dic = TRUE, 
-+             cpo = TRUE), control.inla = list(print.joint.hyper = TRUE), 
-+         verbose = FALSE)
-+ })
+> sdmmodels = mclapply(rrho3,
++         function(rho) {
++                 sdm.inla(form, d=boston.c, W=boston.mat, rho=rho, mmatrix=mmatrixsdm,
++                         family = "gaussian", impacts=TRUE,
++                         control.data = list(hyper = zero.variance),
++                         control.predictor=list(compute=TRUE),
++                         control.compute=list(dic=TRUE, cpo=TRUE),
++                         control.inla=list(print.joint.hyper=TRUE), verbose=FALSE
++                 )
++         })
 \end{Sinput}
 \end{Schunk}
 
 \begin{Schunk}
 \begin{Sinput}
-> bmasdm <- BMA2(sdmmodels, rrho3, 1, impacts = FALSE)
+> bmasdm<-BMA2(sdmmodels, rrho3, 1 , impacts=FALSE)
 \end{Sinput}
 \end{Schunk}
 
 As we have seen in the previous examples, combining the different values 
 for the different values of $\rho$ provides accurate estimates of the posterior
 marginals for the model parameters. The estimates of the marginals of
-$\rho$ can be found in Figure \ref{fig:pmargrho}.
+$\rho$ can be found in Figure~\ref{fig:pmargrho}.
 
 \begin{figure}[h]
 \begin{center}
 \includegraphics{spatial_inla-044}
 \end{center}
 \caption{Posterior marginal of the spatial autocorrelation parameter $\rho$
-for different spatial models.}
+for different spatial econometrics models, Boston housing data.}
 \label{fig:pmargrho}
 \end{figure} 
 
