Minor changes for resubmission.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spdep2@116 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/INLABMA/inst/not_a_vignette/biblio.bib
+++ b/INLABMA/inst/not_a_vignette/biblio.bib
@@ -1,7 +1,7 @@
 
 @article{LeSageetal:2011,
 author = {LeSage, James P. and Kelley Pace, R. and Lam, Nina and Campanella, Richard and Liu, Xingjian},
-title = {New Orleans business recovery in the aftermath of Hurricane Katrina},
+title = {New Orleans Business Recovery in the Aftermath of Hurricane Katrina},
 journal = {Journal of the Royal Statistical Society A},
 volume = {174},
 number = {4},
@@ -82,7 +82,7 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
 @incollection{Lerouxetal:1999,
    author={Leroux, B. and X. Lei and N. Breslow},
    year={1999},
-   title={Estimation of disease rates in small areas: A new mixed model for spatial dependence},
+   title={Estimation of Disease Rates in Small Areas: A New Mixed Model for Spatial Dependence},
    booktitle={Statistical Models in Epidemiology, the Environment and
      Clinical Trials},
    editor={ Halloran, M and Berry, D},
@@ -93,7 +93,7 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
 @incollection{GomezRubioetal:2013,
    author={G\'omez-Rubio, V. and R. S. Bivand and H. Rue},
    year={2013},
-   title={Spatial models using Laplace Approximation methods},
+   title={Spatial Models Using Laplace Approximation Methods},
    booktitle={Handbook of Regional Science},
    editor={Manfred M. Fischer and Peter Nijkamp},
    pages={},
@@ -280,8 +280,8 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
 
 @Article{	  isi:000264374200002,
   author	= {Rue, Havard and Martino, Sara and Chopin, Nicolas},
-  title		= {{Approximate Bayesian inference for latent Gaussian models
-		  by using integrated nested Laplace approximations}},
+  title		= {{Approximate Bayesian Inference for Latent Gaussian Models
+		  by Using Integrated Nested Laplace Approximations}},
   journal	= {Journal of the Royal Statistical Society B},
   year		= {{2009}},
   volume	= {{71}},
@@ -365,12 +365,12 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
 }
 
 @Manual{	  rinla:2013,
-  title		= {INLA: Functions which allow to perform a full Bayesian
-		  analysis of structured additive models using Integrated
+  title		= {INLA: Functions which Allow to Perform a Full Bayesian
+		  Analysis of Structured Additive Models Using Integrated
 		  Nested Laplace Approximaxion},
   author	= {Havard Rue and Sara Martino and Finn Lindgren and Daniel Simpson and Andrea Riebler},
   year		= {2013},
-  note		= {R package version 0.0},
+  note		= {\proglang{R} package version 0.0},
   url		= {http://www.r-inla.org}
 }
 
@@ -621,8 +621,8 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
 
 @Article{	  besagetal:1991,
   author	= {Besag, J. and York, J. and Mollie, A.},
-  title		= {Bayesian image restoration, with two applications in
-		  spatial statistics},
+  title		= {Bayesian Image Restoration, with Two Applications in
+		  Spatial Statistics},
   year		= {1991},
   journal	= {Annals of the Institute of Statistical Mathematics},
   volume	= {43},
@@ -708,8 +708,8 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
 
 @InCollection{Heldetal:2010,
   author =       {L. Held and B. Sch{\"o}dle and H. Rue},
-  title =        {Posterior and cross-validatory predictive checks:
-                  {A} comparison of {MCMC} and {INLA}},
+  title =        {Posterior and Cross-Validatory Predictive Checks:
+                  {A} Comparison of {MCMC} and {INLA}},
   booktitle =    {Statistical Modelling and Regression Structures --
                   Festschrift in Honour of Ludwig Fahrmeir},
   pages =        {91--110},
@@ -722,9 +722,9 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
 @STRING{JRSSB = {Journal of the Royal Statistical Society B}}
 @Article{Lindgren:2011,
   author =       {F. Lindgren and H. Rue and J. Lindstr{\"o}m},
-  title =        {An explicit link between {G}aussian fields and
-                  {G}aussian {M}arkov random fields: {T}he {SPDE}
-                  approach (with discussion)},
+  title =        {An Explicit Link between {G}aussian Fields and
+                  {G}aussian {M}arkov Random Fields: {T}he {SPDE}
+                  Approach (with Discussion)},
   journal =      JRSSB,
   year =         2011,
   volume =       73,
@@ -734,7 +734,7 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
 
 @article{Camelettietal:2013,
    author ={Cameletti, M. and Lindgren, F. and Simpson, D. and Rue, H.},
-   title={Spatio-temporal modeling of particulate matter concentration through the SPDE approach},
+   title={Spatio-temporal Modeling of Particulate Matter Concentration through the SPDE Approach},
    journal={Advances in Statistical Analysis},
    year={2013},
    volume={97},
@@ -2039,7 +2039,7 @@ abstract = {When fitting complex hierarchical disease mapping models, it can be 
 
 
 @article{LeeDurban:2009,
-title = "Smooth-CAR mixed models for spatial count data",
+title = "Smooth-CAR Mixed Models for Spatial Count Data",
 journal = "Computational Statistics and Data Analysis",
 volume = "53",
 number = "8",
@@ -2148,7 +2148,7 @@ S\o{}rbye and H\r{a}vard Rue},
 
 @article{LeeMitchell:2013,
    author={Duncan Lee and Richard Mitchell},
-   title={Locally adaptive spatial smoothing using conditional auto-regressive models},
+   title={Locally Adaptive Spatial Smoothing Using Conditional Auto-Regressive Models},
    year={2013},
    journal={Journal of the Royal Statistical Society C},
    volume ={62},
@@ -2161,21 +2161,21 @@ S\o{}rbye and H\r{a}vard Rue},
 @misc{stan-software:2013,
     author = {{Stan Development Team}},
     year = 2013,
-    title = {Stan: A C++ Library for Probability
+    title = {\pkg{Stan}: A \proglang{C++} Library for Probability
              and Sampling, Version 1.3},
     url = {http://mc-stan.org/}
 }
 
 @Manual{CARBayes:2013,
-    title = {CARBayes: Spatial areal unit modelling},
+    title = {\pkg{CARBayes}: Spatial Areal Unit Modelling},
     author = {Duncan Lee},
     year = {2013},
-    note = {R package version 1.4},
+    note = {\proglang{R} package version 1.4},
     url = {http://CRAN.R-project.org/package=CARBayes},
   }
 
 @article{Blangiardoetal:2013,
-title = "Spatial and spatio-temporal models with R-INLA ",
+title = "Spatial and Spatio-Temporal Models with \pkg{R-INLA} ",
 journal = "Spatial and Spatio-temporal Epidemiology ",
 volume = "4",
 number = "0",
@@ -2184,5 +2184,53 @@ year = "2013",
 note = "",
 author = "Marta Blangiardo and Michela Cameletti and Gianluca Baio and Håvard Rue"
 }
+
+
+@Manual{spdep:2013,
+    title = {\pkg{spdep}: Spatial Dependence: Weighting Schemes, Statistics and Models},
+    author = {Roger Bivand},
+    year = {2013},
+    note = {\proglang{R} package version 0.5-65},
+    url = {http://CRAN.R-project.org/package=spdep},
+  }
+
+  @Article{spatstat:2005,
+    title = {\pkg{Spatstat}: An \proglang{R} Package for Analyzing Spatial Point Patterns},
+    author = {Adrian Baddeley and Rolf Turner},
+    journal = {Journal of Statistical Software},
+    volume = {12},
+    number = {6},
+    pages = {1--42},
+    year = {2005},
+    note = {{ISSN} 1548-7660},
+    url = {www.jstatsoft.org},
+  }
+
+Paulo J. Ribeiro Jr & Peter J. Diggle geoR: a package for
+  geostatistical analysis R-NEWS, 1(2):15-18. June, 2001
+
+
+  @Article{geoR:2001,
+    title = {\pkg{geoR}: a Package for Geostatistical Analysis},
+    author = {Paulo J. {Ribeiro} and Peter J. Diggle},
+    journal = {R-NEWS},
+    year = {2001},
+    volume = {1},
+    number = {2},
+    pages = {15-18},
+    url = {http://cran.R-project.org/doc/Rnews},
+  }
+
+  @Article{geoRglm:2002,
+    title = {\pkg{geoRglm} - a Package for Generalised Linear Spatial Models},
+    author = {O.F. Christensen and P.J. {Ribeiro}},
+    journal = {R-NEWS},
+    year = {2002},
+    volume = {2},
+    number = {2},
+    pages = {26-28},
+    note = {ISSN 1609-3631},
+    url = {http://cran.R-project.org/doc/Rnews},
+  }
 
 
